<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/fondo" >
	<ImageView
	    android:id="@+id/imagenAtrasAyuda"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentTop="true"
	    android:background="@color/blue"
	    android:onClick="pulsarAtras"
	    android:src="@drawable/ic_action_back" />	
	<TextView
	    android:id="@+id/textoAyuda"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
	    android:layout_alignParentLeft="true"
	    android:layout_marginLeft="10dp"
	    android:text="@string/ayuda"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:textColor="@color/blue2"
	    android:typeface="monospace" />	
	<ScrollView
	    android:id="@+id/scrollView"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/textoAyuda"
	    android:layout_marginTop="18dp" >	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >	        
	        <TextView
	            android:id="@+id/texto1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="15dp"
	            android:text="@string/txt1"
	            android:textColor="@color/blue2"
	            android:layout_marginLeft="10dp"
	            android:typeface="monospace" />
		    <TextView
		        android:id="@+id/texto2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="15dp"
		        android:layout_marginLeft="10dp"
		        android:text="@string/txt2"
		        android:textColor="@color/blue2"
		        android:typeface="monospace" />	    
		    <TextView
		        android:id="@+id/texto3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="7dp"
		        android:layout_marginLeft="25dp"
		        android:text="@string/acerca"
		        android:textAppearance="?android:attr/textAppearanceSmall"
		        android:textColor="@color/blue2"
		        android:typeface="monospace" />	    
		    <TextView
		        android:id="@+id/texto4"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="25dp"
		        android:text="@string/ayuda"
		        android:textAppearance="?android:attr/textAppearanceSmall"
		        android:textColor="@color/blue2"
		        android:typeface="monospace" />
		    <TextView
		        android:id="@+id/texto5"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="25dp"
		        android:text="@string/confi"
		        android:textAppearance="?android:attr/textAppearanceSmall"
		        android:textColor="@color/blue2"
		        android:typeface="monospace" />
		    <TextView
		        android:id="@+id/texto6"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="25dp"
		        android:text="@string/nueva"
		        android:textAppearance="?android:attr/textAppearanceSmall"
		        android:textColor="@color/blue2"
		        android:typeface="monospace" />
		    <TextView
		        android:id="@+id/texto8"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="25dp"
		        android:text="@string/puntuacion"
		        android:textAppearance="?android:attr/textAppearanceSmall"
		        android:textColor="@color/blue2"
		        android:typeface="monospace" />
		    <TextView
		        android:id="@+id/texto9"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="15dp"
		        android:layout_marginLeft="10dp"
		        android:text="@string/txt3"
		        android:textColor="@color/blue2"
		        android:typeface="monospace" />	    
		    <TextView
		        android:id="@+id/texto10"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="15dp"
		        android:layout_marginLeft="10dp"
		        android:text="@string/txt4"
		        android:textColor="@color/blue2"
		        android:typeface="monospace" />	    
		    <TextView
		        android:id="@+id/texto11"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="15dp"
		        android:layout_marginLeft="10dp"
		        android:text="@string/txt5"
		        android:textColor="@color/blue2"
		        android:typeface="monospace" />	    
		    <TextView
		        android:id="@+id/texto12"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="15dp"
		         android:layout_marginLeft="10dp"
		        android:text="@string/txt6"
		        android:textColor="@color/blue2"
		        android:typeface="monospace" />	    
		    <TextView
		        android:id="@+id/texto13"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="15dp"
		        android:layout_marginLeft="10dp"
		        android:text="@string/txt7"
		        android:textColor="@color/blue2"
		        android:typeface="monospace" />
		    <TextView
		        android:id="@+id/texto14"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="15dp"
		        android:layout_marginLeft="10dp"
		        android:text=""
		        android:textColor="@color/blue2"
		        android:typeface="monospace" />	        
		</LinearLayout>	    
	</ScrollView>	
</RelativeLayout>
