<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo" >
    <TextView
        android:id="@+id/textoAcerca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical|center_horizontal"
		android:textColor="@color/blue2"
        android:text="@string/acerca"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:typeface="monospace" />
    <ImageView
        android:id="@+id/imagenAtrasAcerca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/blue"
        android:onClick="pulsarAtras"
        android:src="@drawable/ic_action_back" />
    <TextView
        android:id="@+id/textoLicencia"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textoVersion"
        android:layout_marginTop="19dp"
        android:text="@string/licencia"
        android:textColor="@color/blue2"
        android:typeface="monospace" />
    <TextView
        android:id="@+id/textoNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textoVersion"
        android:layout_alignTop="@+id/imagenLogo"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/blue2"
        android:typeface="monospace" />
    <TextView
        android:id="@+id/textoDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp"
        android:autoLink="web"
        android:gravity="center_vertical|center_horizontal"
        android:linksClickable="true"
        android:text="@string/direccion"
        android:textColorLink="@color/green"
        android:typeface="monospace" />
    <ImageView
        android:id="@+id/imagenLogo"
        android:layout_width="150dp"
        android:layout_height="175dp"
        android:layout_alignLeft="@+id/textoAcerca"
        android:layout_below="@+id/textoAcerca"
        android:layout_marginTop="54dp"
        android:src="@drawable/logo" />
    <TextView
        android:id="@+id/textoDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imagenLogo"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/descripcion"
        android:textColor="@color/blue2"
        android:typeface="monospace" />
    <ImageView
        android:id="@+id/imagenLicencia"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/textoLicencia"
        android:layout_below="@+id/textoLicencia"
        android:background="@color/blue2"
        android:src="@drawable/gpl" />
    <TextView
        android:id="@+id/textoVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textoLicencia"
        android:layout_below="@+id/textoNombre"
        android:layout_marginTop="14dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/version"
        android:textColor="@color/blue2"
        android:typeface="monospace" />
    <TextView
        android:id="@+id/textoGNU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imagenLicencia"
        android:layout_toRightOf="@+id/imagenLicencia"
        android:text="@string/licdireccion"
        android:textColor="@color/green"
        android:textSize="12sp"
        android:typeface="monospace" />
</RelativeLayout>