<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo" >   
    <EditText
        android:id="@+id/campoTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textoIntroduce"
        android:layout_centerHorizontal="true"
        android:background="@drawable/editbox"
        android:ems="10"
        android:textSize="12sp"
        android:hint="@string/vacio"
        android:textColor="@color/blue3"
        android:typeface="monospace" />
    <Button
        android:id="@+id/botonVolver"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/botonGuardarP"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:gravity="center_vertical|center_horizontal"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:textColor="@color/blue3"
        android:text="@string/volver"
        android:onClick="pulsarBVolver"
        android:typeface="monospace" />
    <Button
        android:id="@+id/botonGuardarP"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/campoTexto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="pulsarBGuardar"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:textColor="@color/blue3"
        android:text="@string/guardarP"
        android:typeface="monospace" />
    <TextView
        android:id="@+id/textoFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imagenAtrasFinal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/blue2"
        android:text="@string/finalizar"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:typeface="monospace" />
    <TextView
        android:id="@+id/textoPuntos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textoFinal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:textColor="@color/blue2"
        android:gravity="center_vertical|center_horizontal"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:typeface="monospace" />
    <TextView
        android:id="@+id/textoIntroduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textoPuntos"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:textColor="@color/blue2"
        android:text="@string/nombre"
        android:typeface="monospace" />
    <ImageView
        android:id="@+id/imagenAtrasFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/blue"
        android:onClick="pulsarAtras"
        android:src="@drawable/ic_action_back" />
</RelativeLayout>
