<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo" >
    <ImageView
        android:id="@+id/imagenAcerca"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/blue"
        android:onClick="pulsarIAcerca"
        android:src="@drawable/ic_action_about" />
    <ImageView
        android:id="@+id/imagenAyuda"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/blue"
        android:onClick="pulsarIAyuda"
        android:src="@drawable/ic_action_help" />
    <ImageView
        android:id="@+id/imagenConfiguracion"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/blue"
        android:onClick="pulsarIConfiguracion"
        android:src="@drawable/ic_action_settings" />
    <Button
        android:id="@+id/botonSalir"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/blue3"
        android:onClick="pulsarBSalir"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:text="@string/salir" />
    <Button
        android:id="@+id/botonGuardar"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/botonPuntuacion"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="pulsarBPartida"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:textColor="@color/blue3"
        android:text="@string/nueva"
        android:typeface="monospace" />
    <Button
        android:id="@+id/botonPuntuacion"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/botonSalir"
        android:layout_alignLeft="@+id/botonGuardar"
        android:layout_marginBottom="85dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="pulsarBPuntuacion"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:textColor="@color/blue3"
        android:text="@string/puntuacion"
        android:typeface="monospace" />
    <TextView
        android:id="@+id/textoTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imagenAcerca"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="@color/blue2"
        android:textSize="60sp"
        android:typeface="monospace" />
</RelativeLayout>
